# SimpleNeuralNetwork

./: .gitmodules  README.md
DataGenerator/: poison.json  test.py
QML-CMake/: CMakeLists.txt  README.md  main.cpp
QML-CMake/assets/: assets.qrc
QML-CMake/assets/data/: poison.js  safe.js  safe.json
QML-CMake/plugins/: CMakeLists.txt
QML-CMake/qml/: MainPage.qml  qml.qrc  utils.js
QML-CMake/qml/Buttons/: ActionButton.qml  ActionButton.qml.autosave  InfoButton.qml  OverlayButton.qml
QML-CMake/qml/data/: poison.js  safe.js
QML-CMake/src/: CMakeLists.txt  poisonousfooddetector.cpp  poisonousfooddetector.h
QML-CMake/src/Layer/: CMakeLists.txt  layer.cpp  layer.h
QML-CMake/src/NeuralNetwork/: CMakeLists.txt  neuralnetwork.cpp  neuralnetwork.h
QML-CMake/src/utils/: desktopbackgroundfetcher.cpp  desktopbackgroundfetcher.h
QWidget-CMake/: CMakeLists.txt  README.md  main.cpp
QWidget-CMake/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QWidget-CMake/src/Layer/: CMakeLists.txt  layer.cpp  layer.h
QWidget-CMake/src/NeuralNetwork/: CMakeLists.txt  neuralnetwork.cpp  neuralnetwork.h
